fixed overflow of social hero links:

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -93,6 +93,7 @@ border:5px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap:wrap;
     background-color: transparent;
     padding:.5rem;
 }
@@ -259,6 +260,7 @@ border:5px solid black;
             font-size: 1rem;
             color: var(--text-Gray);
         }
+
         .heroSocialList {
                 gap: 1rem;
             }
